# lunar-habitat-anomaly-diagnosis-agent

./: .gitignore  LICENSE  README.md
frontend/: README.md  (+7 more)
selene/: .gitignore  README.md  pyproject.toml
selene/config/: sensor_ranges.yaml
selene/docs/: eden_iss_format.md
selene/docs/detectors/: mdi.md
selene/knowledge/: eden_iss_co2_scrubber_drift.yaml  eden_iss_illumination_degradation.yaml  eden_iss_pump_degradation.yaml  iss_cdra_bed_saturation.yaml  iss_p1_eatcs_leak_2011.yaml
selene/scenarios/: test_step_change.yaml  thermal_loop_coolant_leak.yaml
selene/scripts/: capture_demo_recordings.py  explore_eden_iss.py
selene/selene/: __init__.py  pipeline.py
selene/selene/agent/: __init__.py  agent.py  prompts.py  store.py  tools.py  types.py
selene/selene/api/: __init__.py  app.py
selene/selene/cli/: replay.py  run.py  serve.py
selene/selene/core/: __init__.py  interfaces.py
selene/selene/data/: __init__.py  injector.py  replayer.py
selene/selene/detection/: __init__.py  damp.py  mdi.py  threshold.py
selene/selene/knowledge/: __init__.py  loader.py  matcher.py  models.py
selene/selene/scenarios/: __init__.py  loader.py  registry.py
selene/tests/agent/: test_agent.py  test_agent_integration.py  test_store.py  test_tools.py  test_types.py
selene/tests/api/: test_app.py
selene/tests/cli/: test_replay.py  test_run.py
selene/tests/core/: test_interfaces.py
selene/tests/data/: test_injector.py  test_replayer.py
selene/tests/detection/: __init__.py  test_damp.py  test_mdi.py  test_threshold.py
selene/tests/fixtures/: build_fixture.py
(+13 files in other folders)
